@@ -554,17 +554,28 @@ subprojects {
                                 "-javacoptions:-source 8",
                                 "-javacoptions:-target 8"
                                 ]
+                            if (project.name.is('checker')) {
+                                args += [
+                                        "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
+                                ]
+                            }
+                        } else {
+                            args += [
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                            ]
                         }
                         if (project.name.is('framework')) {
                             // Do not check for the annotated JDK
                             args += [
                                     "-javacoptions:-Anocheckjdk"
-                            ]
-                        }
-                        if (isJava8 && project.name.is('checker')) {
-                            // TODO: enable annotated JDK on Java 9+
-                            args += [
-                                    "-javacoptions:-Xbootclasspath/p:${projectDir}/dist/jdk8.jar",
                             ]
                         }
 
